[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciwatch-mcp"
version = "0.1.0"
description = "vLLM CI monitoring MCP server"
authors = [{name = "Doug", email = "doug@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "buildkite-sdk>=0.7.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ciwatch-mcp = "ciwatch_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ciwatch_mcp*"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
